# SkyTracker

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: analysis.yml
docs/source/: conf.py  getting_started.rst  index.rst
docs/source/_templates/: custom-class-template.rst
docs/source/reference/: index.rst
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AircraftDetailImages.tsx  AircraftDetails.tsx  AircraftList.tsx  AircraftMap.tsx  AircraftMapProvider.tsx  AircraftMarkerLayer.tsx  AircraftTrackLayer.tsx  CanvasMarkersLayer.tsx
frontend/src/lib/: leaflet-markers-canvas.js
frontend/src/pages/: NotFound.tsx
frontend/src/services/: api.ts
frontend/src/store/: appStore.ts  mapStore.ts
frontend/src/types/: api.ts  global.d.ts  leaflet-markers-canvas.d.ts
frontend/src/utils/: atmosphere.tsx
frontend/src/workers/: AircraftMapWorker.js
src/skytracker/: __init__.py  auth.py  config.py  dependencies.py  main.py  settings.py
src/skytracker/models/: __init__.py  aircraft.py  airline.py  airport.py  analysis.py  errors.py  flights.py  maps.py  model.py  search.py  state.py
src/skytracker/scripts/: opensky.py  skytracker.py
src/skytracker/services/: aircraft.py  airline.py  airport.py  browser.py  flights.py  maps.py  opensky.py  search.py  state.py
src/skytracker/storage/: __init__.py  cache.py  database_manager.py  manager.py  storage.py  table_manager.py  table_query.py
src/skytracker/utils/: __init__.py  analysis.py  conversions.py  (+3 more)
(+72 files in other folders)
