[project]
name = "skytracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-connect>=0.8.18",
    "cython>=3.1.3",
    "fastapi[standard]>=0.116.1",
    "h5py>=3.14.0",
    "numpy>=2.3.2",
    "requests>=2.32.5",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pydata-sphinx-theme>=0.16.1",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "sphinx>=8.2.3",
    "sphinx-design>=0.6.1",
    "sphinx-toolbox>=4.0.0",
]

[project.scripts]
skytracker = "skytracker.scripts.skytracker:main"
